# bubblesub

./: .dockerignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CONTRIBUTING.md  Dockerfile  README.md  justfile  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: bubblesub.yml
bubblesub/: __init__.py  __main__.py  api.py  ass.py  ass_util.py  cache.py  commands.py  compat.py  data.py  errors.py  event.py  model.py  mpv.py  opt.py  provider.py  spell_check.py  util.py  worker.py
bubblesub/api/: __init__.py  api.py  audio.py  audio_stream.py  audio_view.py  base_stream.py  base_streams_api.py  cmd.py  gui.py  log.py  playback.py  subs.py  threading.py  undo.py  video.py  video_stream.py  video_view.py
bubblesub/api/media/: __init__.py  audio.py  audio_view.py  media.py  state.py  video.py
bubblesub/ass/: __init__.py  event.py  file.py  info.py  meta.py  reader.py  style.py  util.py  writer.py
bubblesub/ass_renderer/: __init__.py  ass_renderer.py  libass.py
bubblesub/cfg/: __init__.py  base.py  config.py  hotkeys.py  menu.py  options.py
bubblesub/cmd/: __init__.py  audio.py  audio_commit.py  audio_scroll.py  audio_scroll_view.py  audio_set_sel.py  audio_set_view.py  audio_shift.py  audio_shift_sel.py  audio_shift_view.py  audio_zoom.py  audio_zoom_view.py  edit.py  file.py  file_ops.py  file_properties.py  focus_widget.py  grid.py  help.py  inline_edit.py  karaoke.py  misc.py  mute.py  noop.py  pause.py  play_audio_selection.py  play_region.py  play_subtitle.py  properties.py  quit.py  registry.py  reload_cmds.py  reload_plugins.py  save_audio_sample.py  save_screenshot.py  search.py  seek.py  set_palette.py  set_playback_speed.py  set_volume.py  (+21 more)
bubblesub/cmd/common/: __init__.py  bool.py  event_selection.py  path.py  pts.py  sub_selection.py
bubblesub/data/: hotkeys.conf  hotkeys.example  hotkeys.json  menu.conf  menu.example  menu.json  options.yaml
bubblesub/fmt/: __init__.py  wav.py
bubblesub/fmt/ass/: __init__.py  event.py  file.py  meta.py  reader.py  style.py  util.py  writer.py
bubblesub/opt/: __init__.py  base.py  general.py  hotkeys.py  menu.py  options.py
bubblesub/spell_check/: __init__.py  common.py  dummy.py  enchant.py  pyspellchecker.py
bubblesub/tests/: __init__.py  common.py  test_ass.py  test_ass_util.py  test_command_help.py  test_command_naming.py  test_common.py  test_docstring.py  test_preamble.py  test_run.py  test_util.py
bubblesub/tests/api/: __init__.py  test_cmd.py  test_video.py  test_video_stream.py
bubblesub/tests/ass/: __init__.py  test_util.py  test_writer.py
bubblesub/tests/cmd/: __init__.py
bubblesub/tests/cmd/common/: __init__.py  test_event_selection.py  test_pts.py  test_sub_selection.py
bubblesub/tests/fmt/: __init__.py
bubblesub/tests/fmt/ass/: __init__.py  test_util.py  test_writer.py
bubblesub/tests/ui/: __init__.py  nvimrc  test_vim_text_edit.py
bubblesub/ui/: __init__.py  ass_renderer.py  assets.py  audio.py  color_dialog.py  console.py  editor.py  font_combo_box.py  hotkeys.py  main_window.py  menu.py  mpv.py  spectrogram.py  statusbar.py  styles_model.py  subs_grid.py  subs_model.py  time_edit.py  ui.py  util.py  video.py  video_band.py  views.py  vim_text_edit.py
bubblesub/ui/assets/: dark.qss  light.qss
bubblesub/ui/audio/: __init__.py  audio_preview.py  audio_slider.py  audio_timeline.py  base.py  main.py  video_preview.py
bubblesub/ui/model/: events.py  proxy.py  styles.py  subs.py
bubblesub/ui/themes/: __init__.py  base.py  dark.py  light.py  manager.py  system.py
bubblesub/util/: __init__.py  wav.py
docker/: Dockerfile  entrypoint.sh  entrypoint_tests.sh
docs/: cmd.md  doc.md  example_plugin.py
scripts/: generate_assets  generate_documentation  run_mypy  run_tests  vim_playground
scripts/data/: base-theme.scss  palette-dark.scss  palette-light.scss
