[metadata]
name = bubblesub
author = Marcin Kurczewski
author_email = rr-@sakuya.pl
version = 0.0
description = ASS subtitle editor
long_description = file: README.md, LICENSE.md
url = https://github.com/bubblesub/bubblesub
license = GNU General Public License v3 (GPLv3)
classifiers =
    Environment :: X11 Applications :: Qt
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Text Editors
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Video

[options]
include_package_data = True
python_requires = >=3.9
package_dir =
    bubblesub = bubblesub
packages = find:
install_requires =
    ffms2
    numpy
    pyfftw
    PyQT5
    quamash
    regex
    pyqtcolordialog
    python-mpv
    ass-parser
    ass-tag-parser
    Pillow
    pyyaml
    parsimonious
    pluginbase
    lazy-import
    sortedcontainers
    pynvim
    pyenchant; platform_system=="Linux" and platform_machine=="x86_64"
    pyspellchecker; platform_system=="Windows" and platform_machine=="x86_64"

[options.package_data]
bubblesub = data/*, data/**/*, ui/assets/*, ui/assets/**/*

[options.entry_points]
console_scripts =
    bubblesub = bubblesub.__main__:main

[options.extras_require]
develop =
    docstring_parser
    mypy
    pytest
    pytest-qt
    pyScss
